# gn-legacy

./: .gitignore  .gitmodules  BUILD.gn  DEPS  LICENSE.md  README.md  build_debug.cmd  build_linux.sh  build_release.cmd  clean.cmd  debug_args.gn  download_toolchains.sh  env.sh  gclient  gn  gn.bat  ninja  ninja.bat  ninja64  ninja64.bat  release_args.gn  set_env_vars  set_env_vars.sh  set_env_vars64  set_env_vars64.sh  set_env_vars_i586
assets/args/: args.list  debug_args.gn
docs/: MSVC_VER.md  README.md  TOOLS.md  USAGE.md  msvc_version.md
src/: BUILD.gn
src/linux/: BUILD.gn
src/pepatcher/: BUILD.gn  patchpe.cc  patchpe.rc
src/win/: BUILD.gn  hello_static.cc  hello_win32.cc  resource.h
test/: BUILD.gn  gn-format.sh
test/linux/: BUILD.gn
test/linux/gui/: BUILD.gn  hello_linux_gui.cc  hello_linux_gui.h
test/linux/shared/: BUILD.gn  hello_shared.cc  hello_shared.h
test/linux/static/: BUILD.gn  hello_static.cc  hello_static.h
test/linux/terminal/: BUILD.gn  hello_linux_console.cc
test/win/: BUILD.gn  hello_console.cc  resource.rc  version.h
test/win/console/: BUILD.gn  hello_console.cc  resource.rc
test/win/dll/: BUILD.gn  hello_shared.cc  hello_shared.h  resource.rc
test/win/gui/: BUILD.gn  hello_win32.cc  hello_win32.h  hello_world.manifest  resource.h  resource.rc  version.h
test/win/static_lib/: BUILD.gn  hello_static.cc  hello_static.h
tools/: download_toolchains.sh  gn  ninja
tools/mingw/linux/i686-w64-mingw32/lib/: libssp.la  libstdc++.a-gdb.py  libstdc++.la  libstdc++exp.la  libstdc++fs.la  libsupc++.la  libwinpthread.la
tools/mingw/linux/i686-w64-mingw32/lib/ldscripts/: i386pe.x  i386pe.xa  i386pe.xer
tools/mingw/linux/lib/: libcc1.so.0.0.0
tools/mingw/linux/lib/gcc/i686-w64-mingw32/15.2.1/install-tools/: mkheaders.conf
tools/mingw/linux/lib/gcc/i686-w64-mingw32/15.2.1/plugin/: gtype.state  libcc1plugin.so.0.0.0  libcp1plugin.so.0.0.0
tools/mingw/linux/lib/gcc/i686-w64-mingw32/15.2.1/plugin/include/: b-header-vars  configargs.h  plugin-version.h
tools/mingw/linux/libexec/gcc/i686-w64-mingw32/15.2.1/: collect2  liblto_plugin.la  lto-wrapper
tools/mingw/linux/libexec/gcc/i686-w64-mingw32/15.2.1/install-tools/: fixincl  mkheaders
tools/mingw/linux/mingw_20260101/i686-w64-mingw32/include/: _mingw.h
tools/mingw/linux/mingw_20260101/i686-w64-mingw32/include/c++/15.2.1/i686-w64-mingw32/bits/: c++config.h
tools/mingw/linux/mingw_20260101/i686-w64-mingw32/lib/: libatomic.la  libquadmath.la  libssp_nonshared.la
tools/mingw/linux/mingw_20260101/i686-w64-mingw32/lib/ldscripts/: i386pe.xbn  i386pe.xe  i386pe.xn  i386pe.xr  i386pe.xu
tools/mingw/linux/mingw_20260101/lib/: libcc1.la
tools/mingw/linux/mingw_20260101/lib/gcc/i686-w64-mingw32/15.2.1/plugin/: libcc1plugin.la  libcp1plugin.la
tools/mingw/linux/mingw_20260101/lib/gcc/i686-w64-mingw32/15.2.1/plugin/include/: auto-host.h  tm-preds.h  version.h
tools/mingw/linux/mingw_20260101/libexec/gcc/i686-w64-mingw32/15.2.1/: g++-mapper-server
tools/mingw/linux/mingw_20260101/libexec/gcc/i686-w64-mingw32/15.2.1/plugin/: gengtype
tools/mingw/linux/mingw_20260101/share/info/: bfd.info  binutils.info  gcc.info  gccinstall.info  gprof.info  libquadmath.info
tools/mingw/linux/mingw_20260101/share/man/man1/: i686-w64-mingw32-ar.1  i686-w64-mingw32-as.1  i686-w64-mingw32-c++filt.1  i686-w64-mingw32-cpp.1  i686-w64-mingw32-gcc.1  i686-w64-mingw32-gcov-tool.1  i686-w64-mingw32-gcov.1  i686-w64-mingw32-gprof.1  i686-w64-mingw32-objcopy.1  i686-w64-mingw32-objdump.1  i686-w64-mingw32-ranlib.1  i686-w64-mingw32-readelf.1  i686-w64-mingw32-size.1  i686-w64-mingw32-windmc.1
tools/mingw/linux/mingw_20260101/share/man/man7/: gpl.7
tools/mingw/linux/share/info/: as.info  dir  gccint.info  ld.info
tools/mingw/linux/share/man/man1/: i686-w64-mingw32-addr2line.1  i686-w64-mingw32-dlltool.1  i686-w64-mingw32-elfedit.1  i686-w64-mingw32-gcov-dump.1  i686-w64-mingw32-ld.1  i686-w64-mingw32-lto-dump.1  i686-w64-mingw32-nm.1  i686-w64-mingw32-strings.1  i686-w64-mingw32-strip.1  i686-w64-mingw32-windres.1
tools/mingw/linux/share/man/man7/: fsf-funding.7  gfdl.7
tools/mingw/win/: Dockerfile
tools/mingw/win/include/: _mingw.h
tools/mingw/win/lib/gcc/i686-w64-mingw32/15.2.0/: libgfortran.la  libgomp.la  libquadmath.la  libssp_nonshared.la  libstdc++fs.la  libsupc++.la
tools/mingw/win/lib/gcc/i686-w64-mingw32/15.2.0/include/c++/i686-w64-mingw32/bits/: c++config.h
tools/mingw/win/lib/ldscripts/: i386pe.x  i386pe.xa  i386pe.xbn  i386pe.xer  i386pe.xn  i386pe.xu
tools/mingw/win/libexec/gcc/i686-w64-mingw32/15.2.0/install-tools/: mkheaders
tools/mingw/win/win32-devkit/lib/gcc/i686-w64-mingw32/15.2.0/: libatomic.la  libcaf_single.la  libssp.la  libstdc++.a-gdb.py  libstdc++.la  libstdc++exp.la
tools/mingw/win/win32-devkit/lib/gcc/i686-w64-mingw32/15.2.0/finclude/: ieee_arithmetic.mod  ieee_exceptions.mod
tools/mingw/win/win32-devkit/lib/ldscripts/: i386pe.xe  i386pe.xr
tools/mingw/win/win32-devkit/src/: profile
