# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/args.gni")

group("gn_all") {
  public_deps = [
    "./test:gn_tests", # Test targets, keep for ensuring toolchain can produce valid binaries.
    "./src:all", # This is where your source code lives, in ./src/
  ]
}
