# Copyright (c) 2014 - 2026 The Chromium Authors and Alex313031.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/args.gni")

group("gn_all") {
  public_deps = [
    "./src:all",  # This is where your source code lives, in ./src/
    "./test:gn_tests",  # Test targets, keep for ensuring toolchain can produce
                        # valid binaries.
  ]
}
