# Target OS/Architecture
target_os = "win"
target_cpu = "x86"

# Target Windows version.
winver = "2000"

# Debug/Release Flags
is_debug = true
dcheck_enabled = false
is_official_build = false

# C++ Standard to use
cpp_std = "17"

# Whether to enable common controls
use_common_controls = true

# Whether to default to compiling as a console app or GUI app
console_subsystem = false

# Whether to use -Wl,--large-address-aware which is same as MSVC /LARGEADDRESSAWARE
large_address_aware = true
