# Target OS/Architecture
target_os = "win"
target_cpu = "x86"

# Target Windows version.
winver = "2000"

# Debug/Release Flags
is_debug = false
dcheck_enabled = false
is_official_build = true

# C++ Standard to use
cpp_std = "17"

# Whether to enable common controls
use_common_controls = true

# Whether to use -Wl,--large-address-aware which is same as MSVC /LARGEADDRESSAWARE
large_address_aware = true
