# Copyright 2025 Alex313031

group("pepatcher") {
  public_deps = [
    ":patchpe",
  ]
}

executable("patchpe") {
  configs -= [ "//build/config/win:windowed_subsystem" ]
  configs += [
    "//build/config/win:console_subsystem",
    ":patchpe_config",
  ]
  sources = [
    "patchpe.cc",
    "patchpe.rc",
  ]
}

config("patchpe_config") {
  include_dirs = [
    "./",
  ]
}
