# Copyright 2025 Alex313031

group("hello_win") {
  public_deps = [
    ":hello_win32",
    ":hello_console",
  ]
}

executable("hello_win32") {
  configs -= [ "//build/config/win:console_subsystem" ]
  configs += [ "//build/config/win:windowed_subsystem" ]
  sources = [
    "hello_win32.cc",
  ]
}

executable("hello_console") {
  sources = [
    "hello_console.cc",
  ]
}
