# Copyright 2025 Alex313031

group("hello_win") {
  public_deps = [
    ":hello_win32",
    ":hello_console",
  ]
}

executable("hello_win32") {
  configs -= [ "//build/config/win:console_subsystem" ]
  configs += [
    "//build/config/win:windowed_subsystem",
    ":hello_win_config",
  ]
  sources = [
    "gui/hello_win32.cc",
    "gui/hello_win32.h",
    "gui/resource.h",
    "gui/resource.rc",
    "gui/version.h",
  ]
  deps = [
    ":salute",
    ":heller",
  ]
}

executable("hello_console") {
  configs +=[ ":hello_win_config", ]
  sources = [
    "console/hello_console.cc",
    "console/resource.rc",
  ]
  deps = [
    ":salute",
    ":heller",
  ]
}

static_library("salute") {
  include_dirs = [ "static_lib", ]
  sources = [
    "static_lib/hello_static.cc",
    "static_lib/hello_static.h",
  ]
}

shared_library("heller") {
  configs += [ "//build/config/win:windowed_subsystem" ]

  include_dirs = [ "dll", ]
  sources = [
    "dll/hello_shared.cc",
    "dll/hello_shared.h",
    "dll/resource.rc",
  ]
}

config("hello_win_config") {
  include_dirs = [
    "dll",
    "static_lib",
  ]
}
