# Copyright (c) 2026 Alex313031

# Tests that a Linux GTK/Qt GUI program can be built correctly.

import("//build/config/linux/linux.gni")

executable("hello_linux_gui") {
  configs += [
    ":hello_linux_gui_config",
  ]

  # Pull in whichever GUI toolkit is selected. use_gtk / use_qt are mutually
  # exclusive (enforced in //build/config/linux/linux.gni); with neither set the
  # program builds as a plain console app.
  if (use_gtk) {
    configs += [ "//build/config/linux:gtk" ]
  } else if (use_qt) {
    configs += [ "//build/config/linux:qt" ]
  }

  sources = [
    "hello_linux_gui.cc",
    "hello_linux_gui.h",
  ]

  deps = [
    "../shared:hello_linux_shared",
    "../static:hello_linux_static",
  ]
  output_name = "hello_linux_gui"
}

config("hello_linux_gui_config") {
  include_dirs = [
    "./",
  ]
  configs = [
    "../shared:hello_linux_shared_config",
    "../static:hello_linux_static_config",
  ]
}
