# Copyright (c) 2026 Alex313031

# Tests that a Linux shared .so library can be built correctly.

shared_library("hello_linux_shared") {
  configs += [ ":hello_linux_shared_config" ]
  sources = [
    "hello_shared.cc",
    "hello_shared.h",
  ]
}

config("hello_linux_shared_config") {
  defines = [ "HELLO_SHARED_IMPLEMENTATION" ]
  include_dirs = [ "./" ]
}
