# Copyright (c) 2026 Alex313031

# Tests that a Linux static .a library can be built correctly.

static_library("hello_linux_static") {
  configs += [
    ":hello_linux_static_config",
  ]
  sources = [
    "hello_static.cc",
    "hello_static.h",
  ]
}

config("hello_linux_static_config") {
  defines = [ "HELLO_STATIC_IMPLEMENTATION" ]
  include_dirs = [
    "./"
  ]
}
