# Copyright 2026 Alex313031

# Tests Win32 Console Apps

executable("hello_win32_console") {
  configs -= [
    "//build/config/win:windowed_subsystem",
  ]
  configs += [
    "//build/config/win:console_subsystem",
    ":hello_win32_console_config",
  ]
  sources = [
    "hello_console.cc",
    "resource.rc",
  ]
  deps = [
    "../static_lib:heller_win32_static",
  ]
  output_name = "hello_console"
}

config("hello_win32_console_config") {
  include_dirs = [
    "./",
  ]
  configs = [
    "../static_lib:heller_win32_static_config",
  ]
}
